force-app/main/default/objects/Expedition_Action__c/Expedition_Action__c.object-meta.xml
<CustomObject>
    <label>Expedition Action</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Expedition Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expedition Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>