force-app/main/default/objects/Expedition_Action__c/fields/Action_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Completed_Date__c</fullName>
    <label>Action Completed Date</label>
    <type>Date</type>
</CustomField>