force-app/main/default/objects/Expedition_Action__c/fields/Findings_Input__c.field-meta.xml
<CustomField>
    <fullName>Findings_Input__c</fullName>
    <label>Findings Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>